--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
             </ul>
         </div>
     </nav>
+
+    <div class="hero">
+        <div class="container">
+            <h1>Welcome to Earth</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, excepturi.</p>
+        </div>
+    </div>
+
+    <section class="container content">
+        <h2>About Earth</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem autem reprehenderit at dolor distinctio eligendi eos, vitae, voluptatibus velit assumenda natus debitis est laborum! Veritatis perspiciatis aliquam nostrum saepe? Numquam unde quod quidem eligendi possimus aliquid, nisi deleniti. Eligendi iusto harum aperiam, exercitationem temporibus enim ex ipsum dolorem ab! Neque, qui id dolor incidunt quisquam facilis excepturi ratione rem eos nisi. Tempora consequuntur quibusdam illum, ipsa mollitia et optio voluptas impedit delectus asperiores possimus tempore accusamus ipsam! Repudiandae possimus dolorum sed repellendus porro culpa commodi libero eos distinctio odit autem reiciendis explicabo officia mollitia, consequuntur deserunt laudantium perspiciatis nisi itaque?</p>
+
+        <h3>Earth Services</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus aliquam illo cum error libero blanditiis pariatur facilis, assumenda natus accusantium beatae soluta a distinctio et. Accusamus numquam, dolores similique modi nam magnam soluta, rem labore magni pariatur vero laborum maiores placeat! Doloremque nam dolor corrupti molestiae? A ut hic fugit voluptas repudiandae repellat quidem quis est, velit dolorem, pariatur id consequatur ad perferendis magnam quos fuga itaque aliquid porro laudantium eaque! Eaque dolorem veritatis nesciunt animi ipsum facilis odio distinctio asperiores earum, repudiandae corrupti cupiditate autem hic necessitatibus impedit! Excepturi ab amet at libero itaque mollitia exercitationem et necessitatibus dolores.</p>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
